@@ -1,3 +1,12 @@
+2015-05-13  Michael Haubenwallner  <michael.haubenwallner@ssi-schaefer.com>
+
+	* Makefile.in: Regenerated with automake-1.11.6.
+	* aclocal.m4: Likewise.
+	* configure: Likewise.
+	* include/Makefile.in: Likewise.
+	* include/gc_config.h.in: Likewise.
+	* testsuite/Makefile.in: Likewise.
+
 2014-12-18  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* testsuite/lib/boehm-gc.exp: Load target-utils.exp.
